# kpis_hsp_estoque

./: pyproject.toml
dados/: dashboard.pbix
src/: extracao.py  tempCodeRunnerFile.py  transformacao.py
